# condor

./: .gitignore  .project  CHANGES  Condor.cabal  LICENSE  README.md  condor.cabal  prof.sh  stack.yaml
datasets/: .gitignore
datasets/short/: haskell.txt  scala.txt
doc/: Command-line-usage.md  Index-API.md  index.md  nlp.md  profiler_notes.txt  profiler_report.txt  todo.md  todo.txt
examples/: Statistics.hs
samples/: .gitignore  Statistics.hs  haskell.txt  link.txt
samples/short/: lisp.txt
src/: IO.hs  Main.hs
src-app/: IO.hs  Main.hs
src/Condor/: DataTypes.hs  Definition.hs  Index.hs  Statistics.hs  Text.hs
src/Condor/Commons/: DataTypes.hs  Document.hs  Unsafe.hs
src/Condor/Core/: Document.hs  Index.hs
src/Condor/Index/: Memory.hs
src/Condor/Language/: English.hs
src/Condor/Language/English/: Porter.hs  Porter2.hs  StopWords.hs
src/Condor/NLP/: Statistics.hs  Text.hs  Tokenizer.hs
src/Condor/NLP/English/: Porter.hs  StopWords.hs
src/Condor/NLP/Language/: Default.hs
src/Condor/NLP/Language/English/: Porter.hs  StopWords.hs
src/Condor/NLP/Language/Polish/: StopWords.hs
src/Condor/Reader/: Text.hs
src/Condor/Readers/: Text.hs
src/Condor/Search/: Index.hs
test-src/: AllTests.hs  unit-tests.hs
test-src/Condor/: IndexTest.hs  StatisticsTest.hs  TextTest.hs
test-src/Condor/Core/: IndexSpec.hs
test-src/Condor/Index/: MemoryTest.hs
test-src/Condor/Language/English/: Porter2Test.hs  PorterTest.hs
test-src/Condor/NLP/: StatisticsTest.hs  TextTest.hs  TokenizerTest.hs
test-src/Condor/NLP/English/: PorterTest.hs
test-src/Condor/NLP/Language/: DefaultTest.hs
test-src/Condor/NLP/Language/English/: PorterTest.hs
test-src/Condor/Search/: IndexTest.hs
tests/: TextTest.hs
tests/Condor/: TextTest.hs
