name:           Condor
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
synopsis:       Information retrieval library
description:    Library for processing text documents
homepage:       https://github.com/klangner/Condor
category:       search, library, mit

executable condor
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    
                    base >= 4,
                    binary >=0.5.1 && <0.6,
                    containers >=0.5.0 && <0.6,
                    directory >=1.2.0 && <1.3,
                    filepath >=1.3.0 && <1.4,
                    ghc-datasize >=0.1.1 && <0.2
  ghc-options:      -Wall
  other-modules:   
                    Condor.Text,
                    Condor.Index

library 
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  Condor.Index
  other-modules:    
                    Condor.Language.English.Porter,
                    Condor.Language.English.StopWords,
                    Condor.Text
  build-depends:    
                    base,
                    containers >=0.5.0 && <0.6,
                    binary >=0.5.1 && <0.6

test-suite unit-tests
  type:             detailed-0.9
  test-module:      AllTests
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts
  build-depends:   
                    base >= 4,
                    HUnit >=1.2.5 && <1.3,
                    Cabal >=1.16.0 && <1.17,
                    containers >=0.5.0 && <0.6,
                    binary >=0.5.1 && <0.6
  other-modules:   
                    Condor.Index,
                    Condor.IndexTest,
                    Condor.Language.English.Porter,
                    Condor.Language.English.PorterTest,
                    Condor.Language.English.StopWords,
                    Condor.Text,
                    Condor.TextTest,
                    Distribution.TestSuite.HUnit
  hs-source-dirs:  
                    src,
                    test-src

