name:           Condor
version:        0.2
cabal-version:  >= 1.10
build-type:     Simple
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
synopsis:       Information retrieval library
description:    Library for indexing and searching text documents
homepage:       https://github.com/klangner/Condor
Bug-reports:    https://github.com/klangner/Condor/issues
stability:      Unstable interface, incomplete features.
category:       Search, Text, Library
License:        MIT
License-file:   LICENSE
Extra-Source-Files:
                CHANGES

source-repository head
  type:     git
  location: https://github.com/klangner/Condor

executable condor
  hs-source-dirs:   src-app,
                    src
  default-language: Haskell2010
  build-depends:    
                    base >= 4 && <4.7,
                    binary >=0.5.1 && <0.6,
                    containers >=0.5.0 && <0.6,
                    directory >=1.2.0 && <1.3,
                    filepath >=1.3.0 && <1.4,
                    text >=1 && <1.1

  ghc-options:      -Wall
  other-modules:   
                    Condor.Commons.DataTypes,
                    Condor.NLP.Language.English.Porter,
                    Condor.NLP.Language.English.StopWords,
                    Condor.NLP.Text,
                    Condor.Readers.Text,
                    IO,
                    Condor.Index
  main-is:          Main.hs

library 
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  
                    Condor.Commons.DataTypes,
                    Condor.Index,
                    Condor.NLP.Language.English.Porter,
                    Condor.NLP.Language.English.StopWords,
                    Condor.NLP.Statistics,
                    Condor.Readers.Text
  build-depends:    
                    base >= 4 && <4.7,
                    containers >=0.5.0 && <0.6,
                    binary >=0.5.1 && <0.6,
                    text >=1 && <1.1
  other-modules:    Condor.NLP.Text

test-suite unit-tests
  type:             detailed-0.9
  test-module:      AllTests
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts
  build-depends:   
                    base >= 4 && <4.7,
                    HUnit >=1.2.5 && <1.3,
                    Cabal >=1.16.0 && <1.17,
                    containers >=0.5.0 && <0.6,
                    binary >=0.5.1 && <0.6,
                    text >=1 && <1.1

  other-modules:   
                    Condor.Commons.DataTypes,
                    Condor.NLP.Language.English.Porter,
                    Condor.NLP.Language.English.PorterTest,
                    Condor.NLP.Language.English.StopWords,
                    Condor.NLP.Statistics,
                    Condor.NLP.StatisticsTest,
                    Condor.NLP.Text,
                    Condor.NLP.TextTest,
                    Distribution.TestSuite.HUnit,
                    Condor.Index,
                    Condor.IndexTest
  hs-source-dirs:  
                    src,
                    test-src
         test-src
  test-src
