name:           condor
version:        0.4
cabal-version:  >= 1.10
build-type:     Simple
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
synopsis:       Information retrieval library
homepage:       https://github.com/klangner/Condor
Bug-reports:    https://github.com/klangner/Condor/issues
stability:      Unstable interface, incomplete features.
category:       Search, Text
License:        BSD3
License-file:   LICENSE
Extra-Source-Files:
                CHANGES
description:    
    An Information Retrieval (IR) library which consists of the following components:
    .
    * Search - for indexing and searching text documents. 
      Check "Condor.Core.Index" for API information
    .
    * Readers for reading documents from disk. Check "Condor.Reader.Text" folder text reader.

source-repository head
  type:     git
  location: https://github.com/klangner/condor

executable condor
  hs-source-dirs:   src-app,
                    src
  default-language: Haskell2010
  build-depends:    
                    base == 4.*,
                    binary >=0.5.1 && <1,
                    containers >=0.5.0 && <0.6,
                    directory >=1.2.0 && <2,
                    filepath >=1.4.0 && <1.5,
                    text == 1.*,
                    glider-nlp == 0.4.*

  ghc-options:      -Wall
  other-modules:   
                    Condor.Core.Document,
                    Condor.Reader.Text,
                    Condor.Core.Index,
                    IO
  main-is:          Main.hs

library 
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  
                    Condor.Core.Document,
                    Condor.Reader.Text,
                    Condor.Core.Index
  build-depends:    
                    base == 4.*,
                    containers >=0.5.0 && <0.6,
                    binary >=0.5.1 && <1,
                    text == 1.*,
                    glider-nlp == 0.4.*


test-suite unit-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts
  build-depends:   
                    base == 4.*,
                    hspec == 2.*,
                    Cabal == 1.*,
                    containers >=0.5.0 && <0.6,
                    binary >=0.5.1 && <1,
                    text == 1.*,
                    glider-nlp == 0.4.*

  other-modules:   
                    Condor.Core.Document,
                    Condor.Core.Index,
                    Condor.Core.IndexSpec
  hs-source-dirs:
                    src,
                    test-src
